--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -28,14 +28,14 @@
                 <li class="menu-item">
                     내정보
                     <ul class="sub-menu">
-                        <li class="sub-menu-list"><a href="/user/mypage/updatePage">회원정보수정</a></li>
-                        <li class="sub-menu-list"><a href="/user/mypage/deletePage">회원탈퇴</a></li>
+                        <li class="sub-menu-list"><a href="/user/mypage/update-page">회원정보수정</a></li>
+                        <li class="sub-menu-list"><a href="/user/mypage/delete-page">회원탈퇴</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     내리뷰
                     <ul class="sub-menu">
-                        <li class="sub-menu-list"><a href="#">리뷰목록</a></li>
+                        <li class="sub-menu-list"><a href="/user/mypage/my-reviews-page">리뷰목록</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
