--- a/src/main/resources/templates/user/mypage/member_del/memberDel.html
+++ b/src/main/resources/templates/user/mypage/member_del/memberDel.html
@@ -12,7 +12,7 @@
 <div class="content">
 	<span class="middle-font">회원탈퇴</span>
 		<div class="pw-box">
-			<form action="/user/mypage/checkPw" method="POST">
+			<form action="/user/mypage/check-pw" method="POST">
 				<div class="pw-checkbox">
 					<div class="pw-checkbox-span">
 						<span class="big-font">비밀번호 확인</span>
