--- a/src/main/resources/static/user/mypage/css/memberUpdate.css
+++ b/src/main/resources/static/user/mypage/css/memberUpdate.css
@@ -53,3 +53,68 @@
     justify-content: center;
     margin-top: 50px;
 }
+
+.btn-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	margin-top: 30px;
+}
+ /* 컨테이너 스타일 */
+.radio-container {
+    border: 1px solid #C0C0C0;
+    border-radius: 10px;
+    padding: 20px;
+    width: 920px;
+    display: grid;
+    grid-template-columns : 1fr;
+    row-gap: 20px;
+}
+
+/* 라디오 그룹 스타일 */
+.radio-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; /* 라디오 버튼 간 간격 */
+    
+}
+
+/* 라디오 버튼과 텍스트 정렬 */
+.radio-group label {
+    display: flex;
+    align-items: center; /* 라디오 버튼과 텍스트를 같은 라인에 정렬 */
+  gap: 5px; /* 라디오 버튼과 텍스트 사이의 간격 */
+         
+     }
+.span-radio {
+	border-bottom: 1px solid #EBECF0;
+	display: grid;
+    grid-template-columns: 100px 1fr;
+    column-gap: 20px; /* 각 열 간의 간격 */
+    padding : 20px;
+}
+  
+.text-group {
+	display: grid;
+	row-gap: 12px;
+    margin-bottom: 25px;
+}
+
+.green {
+	color: #10A142;
+}
+
+.bold {
+	font-weight: 700;
+	color: #000000;
+	align-content: center;
+}
+
+.container-gap {
+  	margin-bottom: 50px;
+}
+
+.content-gap {
+  	margin-bottom: 25px;
+}
