Feat: 베스트 상품 조회 페이지 필터 추가

--- a/src/main/resources/static/user/products/css/list.css
+++ b/src/main/resources/static/user/products/css/list.css
@@ -230,3 +230,15 @@
 .order-by-click {
 	color: #845EC2;
 }
+
+.best-filter-area {
+	display: flex;
+	padding: 20px 0;
+	border-bottom: 1px solid #eaeaea;
+	border-top: 1px solid #eaeaea;
+	margin: 45px 0 65px 0; 
+}
+
+.best {
+	justify-content: flex-end;
+}
