--- a/src/main/resources/templates/user/common/fragments/pagination.html
+++ b/src/main/resources/templates/user/common/fragments/pagination.html
@@ -8,6 +8,6 @@
 		<i id="page-arrow-right" class="fa-solid fa-angle-right page-arrow"></i>
 	</div>
 	
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="/user/common/js/pagination.js"></script>
 </html>
