--- a/src/main/resources/templates/user/registration/registration.html
+++ b/src/main/resources/templates/user/registration/registration.html
@@ -14,7 +14,9 @@
 <body>
 <div class="join-frame">
 	<div class="join-wrap-info">
-	<img src="/user/common/imgs/main-logo.svg" alt="메인로고" class="mainlogo" />
+	<a href="/user/main">
+	    <img src="/user/common/imgs/main-logo.svg" alt="메인로고" class="mainlogo" />
+	</a>
 		<form action="/user/members/join" method="POST" id="joinForm">
 		<h3>회원가입</h3>
 
