--- a/src/main/resources/static/user/registration/css/registration.css
+++ b/src/main/resources/static/user/registration/css/registration.css
@@ -40,6 +40,7 @@ h3 {
 
 .agreement input[type="radio"] {
     margin-right: 10px; /* 텍스트와 라디오 버튼 사이의 여백 */
+    margin-left: 0px;
 }
 
 button {
@@ -87,7 +88,6 @@ button img {
 
 
 input:not([type="radio"]) {
-    flex: 1 1 auto;
     box-sizing: border-box;
     width: 100%;
     font-size: 16px;
@@ -95,6 +95,7 @@ input:not([type="radio"]) {
     color: #222;
     max-width: 380px;
     border: none;
+    margin-left: 0px;
 }
 
 input:focus {
@@ -110,6 +111,9 @@ input:focus {
 
 .default-btn.short-confirm {
     background-color: #845EC2;
+    height: 25px;
+    font-size: 12px;
+    width: 55px;
 }
 
 .form-item {
