--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -41,8 +41,8 @@
 		<ul class="nav-category-list">
 			<li><a href="/user/products/searchForm?categoryCountryType=01" class="nav-category-item">국내도서</a></li>
 			<li><a href="/user/products/searchForm?categoryCountryType=02" class="nav-category-item">외국도서</a></li>
-			<li><a href="/user/products/searchForm?categoryCountryType=03" class="nav-category-item">베스트</a></li>
-			<li><a href="" class="nav-category-item">신상품</a></li>
+			<li><a href="/user/products/searchForm?categoryCountryType=03&orderByValue=1&selectedDateCd=01" class="nav-category-item">베스트</a></li>
+			<li><a href="/user/products/searchForm?categoryCountryType=04&orderByValue=2" class="nav-category-item">신상품</a></li>
 		</ul>
 	</nav>
 
