--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -7,7 +7,7 @@
 <div class="header-inner">
 	<div class="header-top">
 		<div class="top-menu-wrap">
-			<a href="" class="top-menu-link">로그인</a> <a href="" class="top-menu-link">장바구니</a> <a href="" class="top-menu-link">1:1문의</a>
+			<a href="" class="top-menu-link">로그인</a> <a href="" class="top-menu-link">장바구니</a> <a href="/user/cart/list" class="top-menu-link">1:1문의</a>
 		</div>
 	</div>
 
@@ -21,7 +21,7 @@
 		</div>
 
 		<div class="searchbar-right">
-			<a href="" class="cart-icon-wrap"> <img src="/user/common/imgs/web-cart-icon.svg" alt="장바구니" class="cart-icon">
+			<a href="/user/cart/list" class="cart-icon-wrap"> <img src="/user/common/imgs/web-cart-icon.svg" alt="장바구니" class="cart-icon">
 				<div class="cart-qty">
 					<p></p>
 				</div>
