--- a/src/main/resources/templates/user/common/fragments/footer.html
+++ b/src/main/resources/templates/user/common/fragments/footer.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       th:fragment="FooterFragment">
 <!-- footer 설정 -->
+<!-- 탑버튼 -->
 <div class="footer-logo">
     <img src="/user/common/imgs/footer-logo.svg" alt="푸터로고"/>
 </div>
