--- a/src/main/resources/templates/user/main/cart.html
+++ b/src/main/resources/templates/user/main/cart.html
@@ -24,7 +24,7 @@
 			<div class="cart-table">
 				<div class="table-header table-columns-area">
 					<div class="check-btn">
-						<input type="checkbox" id="select-all" class="check-box"> <label for="check-btn"></label>
+						<input type="checkbox" id="select-all" class="check-box"> <label for=""></label>
 					</div>
 					<div class="table-column product-info">상품정보</div>
 					<div class="table-column price-qty">주문금액/수량</div>
@@ -34,14 +34,14 @@
 				<div class="cart-table-data-wrapper cart-items">
 					<div th:each="item : ${cartItems}" class="cart-table-data cart-item">
 						<div class="check-btn">
-							<input type="checkbox" class="check-box item-checkbox"> <label for="check-btn"></label>
+							<input type="checkbox" class="check-box item-checkbox"> <label for=""></label>
 						</div>
 						<div class="product-info" >
 							<img class="product-img" th:src="@{/images/books/{image}(image=${item.book_thumbnail_changed})}" alt="책 이미지" />
 							<div class="product-title-price">
 								<p class="book-title" th:text="${item.book_name}"></p>
 								<div class="price-wrap">
-									<p th:text="${item.book_price}" class="book-price"></p>
+									<p th:text="${#numbers.formatInteger(item.book_price, 0, 'COMMA')}" class="book-price"></p>
 									<p>원</p>
 								</div>
 							</div>
@@ -55,7 +55,7 @@
 
 							<div class="reduce-qty">
 								<i class="fa-solid fa-minus"></i> 
-								<input type="number" max="999" id="" class="input-qty" value="1" /> 
+								<input type="number" max="999" id="" class="input-qty" th:value="${item.getCart_purchase_qty()}" />
 								<i class="fa-solid fa-plus"></i>
 							</div>
 						</div>
