--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -7,10 +7,16 @@
 }
 /* 버튼들 */
 /* 탑버튼 */
+.top-btn-inner {
+    position: relative;
+    width: 1280px;
+    margin: 0 auto;
+    overflow: hidden;
+}
 #top-btn {
     position: fixed;
     bottom: 270px;
-    right: 200px;
+    right: 100px;
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -22,13 +28,19 @@
     cursor: pointer;
     opacity: 0;
     transition: all 0.3s;
-    transform: translateY(3rem);
+    transform: translateY(30px);
     z-index: 10;
 }
 
 #top-btn .fa-arrow-up {
     font-size: 20px;
     color: #666;
+}
+
+@media (min-width: 1920px) {
+    #top-btn {
+        right: 340px; /* 적절한 위치로 조정, 화면 크기에 따라 조정 가능 */
+    }
 }
 
 body.scrolling #top-btn {
