--- a/src/main/resources/templates/user/main/products/detail.html
+++ b/src/main/resources/templates/user/main/products/detail.html
@@ -67,15 +67,21 @@
                         <p>원</p>
                     </div>
                 </div>
-                <div class="order-btn-wrap">
-                    <form action="/user/cart/add" method="POST" id="add-cart-form">
-                        <input type="hidden" name="book_isbn" id="book_isbn" th:value="${bookDetail.book_isbn}">
-                        <input type="hidden" name="cart_purchase_qty" id="cart_purchase_qty" value="">
-                        <input type="hidden" name="book_price" id="book_price" value="">
-                        <button type="submit" class="default-btn border" id="cart-btn" th:data-memberid="${member_id}">장바구니</button>
-                        <button type="submit" class="default-btn" id="direct-order-btn" th:data-memberid="${member_id}">바로구매</button>
-                    </form>
-                </div>
+                <form id="add-form">
+                    <input type="hidden" name="book_isbn" id="book_isbn" th:value="${bookDetail.book_isbn}">
+                    <input type="hidden" name="book_isbn" id="book_name" th:value="${bookDetail.book_name}">
+                    <input type="hidden" name="book_isbn" id="book_thumbnail_changed" th:value="${bookDetail.book_thumbnail_changed}">
+                    <input type="hidden" name="cart_purchase_qty" id="cart_purchase_qty" value="">
+                    <input type="hidden" name="book_price" id="book_price" value="">
+                    <div class="order-btn-wrap">
+                        <button class="default-btn border" id="cart-btn" data-action="cart"
+                                th:data-memberid="${member_id}">장바구니
+                        </button>
+                        <button class="default-btn" id="buy-now-btn" data-action="buyNow"
+                                th:data-memberid="${member_id}">바로구매
+                        </button>
+                    </div>
+                </form>
             </div>
         </section>
 
@@ -207,8 +213,8 @@
             <div class="info-header">
                 <p class="info-title">교환/반품/품절 안내</p>
                 <div class="refund-btn-wrap">
-                    <button class="default-btn border">반품신청</button>
-                    <button class="default-btn">1:1문의</button>
+                    <button class="default-btn border" id="refund-btn" th:data-memberid="${member_id}">반품신청</button>
+                    <button class="default-btn" id="inquiry-btn" th:data-memberid="${member_id}">1:1문의</button>
                 </div>
             </div>
             <div class="refund-info-list">
