--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 <link rel="stylesheet" href="/user/common/css/common.css" />
 <link rel="stylesheet" href="/user/login/css/login.css" />
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   
 </head>
 <body>
@@ -47,7 +48,9 @@
 						<button><img src="/user/common/imgs/sns-login-btn-naver.png" alt="네이버 소셜 연동" class="social-btn" /></button>	
 					</div>
 					<div>
-						<button><img src="/user/common/imgs/sns-login-btn-kakao.png" alt="카카오 소셜 연동" class="social-btn" /></button>
+						<a href="/oauth2/authorization/kakao">
+					    	<img src="/user/common/imgs/sns-login-btn-kakao.png" id="kakao_login" alt="카카오 소셜 연동" class="social-btn" />						
+					    </a>
 					</div>	
 				</div>
 	        </div>
