--- a/src/main/resources/templates/user/registration/registration.html
+++ b/src/main/resources/templates/user/registration/registration.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/user/registration/css/registration.css" />
 <link rel="stylesheet" href="/user/common/css/common.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -82,8 +83,10 @@
 					<button><img src="/user/common/imgs/sns-login-btn-naver.png" alt="네이버 소셜 연동" class="social-btn" /></button>	
 				</div>
 				<div>
-					<button ><img src="/user/common/imgs/sns-login-btn-kakao.png" alt="카카오 소셜 연동" class="social-btn" /></button>
+					<button ><img src="/user/common/imgs/sns-login-btn-kakao.png" id="kakao_login_btn" alt="카카오 소셜 연동" class="social-btn" /></button>
 				</div>	
+				<input type="hidden" id="kakao_login_cd" name="kakao_login_cd" />
+				
 			</div>
 			
 			<div class="agreement">
@@ -100,5 +103,6 @@
 	<script src="/user/registration/js/memberReg.js"></script>
 	<script
 		src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+		
 </body>
 </html>
